# simple_openhands

./: .gitignore  Dockerfile  Dockerfile.windows  README-Windows.md  README.md  deploy-windows.ps1  deploy-windows.sh  deploy.sh  main.py  pyproject.toml
docs/: API_REFERENCE.md
simple_openhands/: __init__.py  bash.py  bash_constants.py  cli.py  main.py  models.py  windows_bash.py
simple_openhands/core/: __init__.py  logger.py  platform.py  schema.py
simple_openhands/events/: __init__.py  event.py
simple_openhands/events/action/: __init__.py  action.py  commands.py  files.py
simple_openhands/events/observation/: __init__.py  commands.py  error.py  files.py  observation.py
simple_openhands/events/serialization/: __init__.py  event.py
simple_openhands/plugins/: __init__.py  requirement.py
simple_openhands/plugins/agent_skills/: __init__.py  agentskills.py
simple_openhands/plugins/agent_skills/_aci/: __init__.py  editor.py  linter.py
simple_openhands/plugins/agent_skills/file_editor/: __init__.py
simple_openhands/plugins/jupyter/: __init__.py  execute_server.py
simple_openhands/plugins/vscode/: __init__.py
simple_openhands/utils/: __init__.py  system.py
simple_openhands/utils/file/: __init__.py  file_viewer.py  files.py
simple_openhands/utils/git/: README.md  __init__.py  git_changes.py  git_diff.py  git_handler.py
tests/: test_agent_skills.py  test_bash_parsing.py  test_bash_ps1_metadata.py  test_bash_session.py  test_file_viewer.py  test_fileops.py  test_python_commands.py  test_system_stats.py  test_windows_bash.py
workspace/: .gitkeep
(+7 files in other folders)
